Builds with requirejs optimizer

--- a/boilerplate/index.html
+++ b/boilerplate/index.html
@@ -18,9 +18,8 @@
 </head>
 <body>
 <div class="container">
-    <div class="hero-unit">
-        <h1>Loading</h1>
-    </div>
+    <h1>Loading...</h1>
+    <p>Please wait, it can take some time.</p>
 </div>
 <!-- build:js js/amd-app.js -->
 <script src="libs/require/require-2.1.2.js"></script>
