--- a/boilerplate/index.html
+++ b/boilerplate/index.html
@@ -18,20 +18,13 @@
 </head>
 <body>
 <div class="container">
-    <div class="hero-unit">
-        <h1>Loading</h1>
-    </div>
+    <h1>Loading...</h1>
+    <p>Please wait, it can take some time.</p>
 </div>
-<!-- build:js js/amd-app.js -->
-<script src="libs/require/require-2.1.2.js"></script>
-<script src="js/config.js"></script>
+<script src="compiled-application.js"></script>
+<script src="libs/jquery.min.js"></script>
 <script type="text/javascript">
-    require.config({
-        baseUrl: 'js',
-        locale: 'en_us'
-    });
     require(["application"]);
 </script>
-<!-- endbuild -->
 </body>
 </html>
