Update Github pages

--- a/boilerplate/index.html
+++ b/boilerplate/index.html
@@ -22,7 +22,7 @@
     <p>Please wait, it can take some time.</p>
 </div>
 <script src="compiled-application.js"></script>
-<script src="libs/jquery.min.js"></script>
+<script src="libs/jquery-1.9.0.min.js"></script>
 <script type="text/javascript">
     require(["application"]);
 </script>
