--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
 
         <h2>Idea</h2>
 
-        <p>The idea of BrixJS is similar to that one implemented at Google Web Toolkit (GWT).<br/>
-            You define "places" (like bookmarkable states) and activities, that should run when user comes to some
-            place.</p>
+        <p>The idea of BrixJS is similar to the one implemented at Google Web Toolkit (GWT).<br/>
+            "Places" are defined as bookmarkable states, and when a user comes to some place the corresponding "activity" is run.
+            With Marionette layouts and views you define different regions.<br/>With BrixJs you manage these regions.</p>
 
         <p>That's it!</p>
 
