--- a/index.html
+++ b/index.html
@@ -62,6 +62,8 @@
 
         <p>That's it!</p>
 
+        <p>You start with one main region and then step-by-step split it to several smaller.<br/>On each hierarchy-level you can switch underlying layout to something absolutely different depending on current place.</p>
+
         <p>Benefits from using BrixJS:</p>
 
         <ul>
@@ -72,6 +74,7 @@
                 leads to better UI-performance
             </li>
             <li>infinite hierarchy of view regions and their managers</li>
+            <li>test your logic with mocked-views</li>
         </ul>
 
         <h2>How it works?</h2>
@@ -109,7 +112,7 @@
                 <a href="https://github.com/jrburke/requirejs">RequireJS</a> 2.1.2 (could be easily removed)
             </li>
             <li>
-                <a href="handlebarsjs.com">Handlebars</a> 1.0-rc1
+                <a href="http://handlebarsjs.com">Handlebars</a> 1.0-rc1
             </li>
             <li>
                 <a href="https://github.com/SlexAxton/require-handlebars-plugin">RequireJS-Handlebars plugin</a> 0.4.0
